--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
             </table>
         </div>
     </div>
-    <audio id="bark" src="bark.mp3"></audio>
-    <audio id="meow" src="meow.mp3"></audio>
+    <audio id="bark" src="src\bark.mp3"></audio>
+    <audio id="meow" src="src\meow.mp3"></audio>
+    <!-- yeni ses elementleri -->
+    <audio id="elephant" src="src\elephant.mp3"></audio>
+    <audio id="lion" src="src\lion.mp3"></audio>
+    <audio id="onkeys" src="src\onkeys.mp3"></audio>
+    <audio id="penguin" src="src\penguin.mp3"></audio>
+    <audio id="wolf" src="src\wolf.mp3"></audio>
 </div>
 <!-- <script src="script.js"></script> -->
 <script src="script-2.js"></script>
